[gd_scene load_steps=4 format=3 uid="uid://cuyjgb3rti5nj"]

[ext_resource type="PackedScene" uid="uid://bfedkwjxiho3r" path="res://ui/common/groups_icon.tscn" id="1_qvsl1"]
[ext_resource type="Script" uid="uid://c7h460ahxs23w" path="res://ui/todo/todo_item.gd" id="1_ysi4i"]
[ext_resource type="PackedScene" uid="uid://cvvsqwmgu8v15" path="res://ui/common/context_button/context_button.tscn" id="2_ysi4i"]

[node name="TodoItem" type="HBoxContainer"]
custom_minimum_size = Vector2(200, 40)
offset_right = 264.0
offset_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource("1_ysi4i")

[node name="GroupsIcon" parent="." instance=ExtResource("1_qvsl1")]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ContextButton" parent="ScrollContainer" instance=ExtResource("2_ysi4i")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Todo Item"
alignment = 0
canBeCopied = true
canBeDeleted = true
canBeEdited = true
editableInPlace = true
canBeGrouped = true

[node name="StrikeLine" type="Line2D" parent="ScrollContainer/ContextButton"]
points = PackedVector2Array(-1, 20, 209, 20)
width = 4.0
default_color = Color(0.290196, 0.827451, 0, 0.47451)

[node name="PriorityLevel" type="OptionButton" parent="."]
layout_mode = 2
selected = 4
allow_reselect = true
item_count = 9
popup/item_0/text = "9"
popup/item_0/id = 0
popup/item_1/text = "8"
popup/item_1/id = 0
popup/item_2/text = "7"
popup/item_2/id = 0
popup/item_3/text = "6"
popup/item_3/id = 0
popup/item_4/text = "5"
popup/item_4/id = 0
popup/item_5/text = "4"
popup/item_5/id = 0
popup/item_6/text = "3"
popup/item_6/id = 0
popup/item_7/text = "2"
popup/item_7/id = 0
popup/item_8/text = "1"
popup/item_8/id = 0
